<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/slidelayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgslide"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:contentDescription="@string/description_slide"
        android:layout_marginTop="72dp"
        android:layout_gravity="center" />


    <TextView
        android:id="@+id/titleslide"
        style="@style/slideStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Title_field"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        />

    <com.codesgood.views.JustifiedTextView
        android:id="@+id/subtitleslide"
        style="@style/slideStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:text="@string/Subtitle_field"
        android:textSize="17sp"

        />


</LinearLayout>