<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.SelectionRol"
    >

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgSelect"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/height_imageSpace_selectionRol"
        android:src="@drawable/logo"
        app:civ_border_color="@color/zxing_transparent"
        app:civ_border_width="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/height_textSpace_selectionRol"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imgSelect"
        app:layout_constraintStart_toStartOf="@+id/imgSelect"
        app:layout_constraintTop_toBottomOf="@+id/imgSelect" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/height_textSpace_selectionRol"
        android:text="@string/selec_job"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/imgC"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="@dimen/height_imageSpace_selectionRol"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/description_img_cliente"
        app:layout_constraintEnd_toStartOf="@+id/imgW"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/cliente" />

    <ImageView
        android:id="@+id/imgW"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="@dimen/height_imageSpace_selectionRol"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/description_img_trabajador"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgC"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/trabajador" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/client"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imgC"
        app:layout_constraintStart_toStartOf="@+id/imgC"
        app:layout_constraintTop_toBottomOf="@+id/imgC" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/worker"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imgW"
        app:layout_constraintStart_toStartOf="@+id/imgW"
        app:layout_constraintTop_toBottomOf="@+id/imgW" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/height_textSpace_selectionRol"
        android:text="@string/please_choose"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />


</androidx.constraintlayout.widget.ConstraintLayout>