<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="3dp"
    >


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:titleTextColor="@color/white"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:title="Resultados de la prueba" />


    <TextView
        android:id="@+id/txtResultados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="16dp"
        android:text="@string/label_calif"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:textColor="@color/blue_sky"

        />

    <ImageView
        android:id="@+id/img"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/txtResultados"
        android:layout_centerHorizontal="true"
        android:src="@drawable/work_2" />


    <com.codesgood.views.JustifiedTextView
        android:id="@+id/txtSumarry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img"
        android:gravity="center"
        android:text="@string/text_congrats"

        />

    <TextView
        android:id="@+id/label_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtSumarry"
        android:layout_marginTop="32dp"
        android:text="@string/text_status"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/txtStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/label_status"
        android:layout_marginLeft="8dp"
        android:layout_below="@+id/txtSumarry"
        android:layout_toRightOf="@+id/label_status"
        android:text="texto"
        />

</RelativeLayout>